# TheAstroroverProject

./: README.md
Arduino_Code/arduino_sensing_code/: platformio.ini
Arduino_Code/arduino_sensing_code/include/: Buzzer.h  DHTSensor.h  IRSensor.h  LCDDisplay.h  LEDPin.h  ModeController.h  PhotoResistor.h  PirSensor.h  RGBLed.h  RPiCommands.h  Timer.h
Arduino_Code/arduino_sensing_code/src/: main.cpp
Arduino_Code/arduino_sensing_code/src/actuators/: Buzzer.cpp  LCDDisplay.cpp  LEDPin.cpp  RGBLed.cpp
Astrorover_Microbit_Code/: platformio.ini
Astrorover_Microbit_Code/include/: UltrasonicSensor.h
Astrorover_Microbit_Code/src/: UltrasonicSensor.cpp  main.cpp
PC_REPO/: README.md  slam_with_imu.launch.py
PC_REPO/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
PC_REPO/log/: latest_build
PC_REPO/src/gui_pkg/: package.xml  setup.py
PC_REPO/src/rover_control/: package.xml  setup.py
PI_REPO/ros2_ws/: RTIMULib.ini
PI_REPO/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
PI_REPO/ros2_ws/install/arduino_bridge/share/arduino_bridge/: package.sh  package.xml
PI_REPO/ros2_ws/src/install/carto_localization/share/carto_localization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PI_REPO/ros2_ws/src/install/carto_localization/share/carto_localization/config/: cartographer_localization.lua
PI_REPO/ros2_ws/src/install/carto_localization/share/carto_localization/launch/: cartographer_localization.launch.py  tf.launch.py
(+105 files in other folders)
